// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TemplatesPage /> tests should match snapshot 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--standard templatesPageHeader StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="PageHeader--breadcrumbsDiv"
      >
        <div
          class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/accountId/cd"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                data-icon="cd-main"
              >
                <svg
                  height="16"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M26.427 7.06A5.073 5.073 0 0129 11.52l-.077 8.934a5.073 5.073 0 01-2.537 4.35l-8.002 4.618a5.073 5.073 0 01-5.035.021l-7.776-4.402A5.073 5.073 0 013 20.583l.077-8.935a5.073 5.073 0 012.537-4.35l8.002-4.619a5.073 5.073 0 015.035-.02l7.776 4.402zm-2.83 6.938c-.42 1.586-2.029 2.538-3.601 2.141l-7.489-2.026a4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.925 4.835 4.835 0 00.479 3.664 4.757 4.757 0 002.905 2.251 4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.924l.26-1.047a.25.25 0 00-.177-.302l-1.258-.34a.25.25 0 00-.307.18l-.256 1.025c-.426 1.602-2.064 2.556-3.651 2.127-1.582-.428-2.523-2.073-2.1-3.67.421-1.586 2.03-2.538 3.602-2.142l7.489 2.027a4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.925 4.835 4.835 0 00-.479-3.664 4.757 4.757 0 00-2.905-2.251 4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.924l-.247.828a.25.25 0 00.174.312l1.259.34a.25.25 0 00.304-.169l.248-.827c.426-1.602 2.064-2.557 3.651-2.127 1.582.428 2.523 2.073 2.1 3.67z"
                    fill="url(#cd-main_svg__a)"
                    fill-rule="evenodd"
                  />
                  <defs>
                    <lineargradient
                      gradientUnits="userSpaceOnUse"
                      id="cd-main_svg__a"
                      x1="6.774"
                      x2="21.5"
                      y1="2"
                      y2="30"
                    >
                      <stop
                        stop-color="#62F91F"
                      />
                      <stop
                        offset="1"
                        stop-color="#45BD35"
                      />
                    </lineargradient>
                  </defs>
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                Yogesh_Test
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="ng-tooltip-native"
      >
        <h2
          data-tooltip-id="templatesPageHeading"
        >
           
          common.templates
        </h2>
      </div>
    </div>
  </div>
  <div
    class="Layout--horizontal StyledProps--main PageSubHeader--container templatesPageSubHeader StyledProps--flex"
  >
    <div
      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
    >
      <span
        class="bp3-popover-wrapper main"
      >
        <span
          class="bp3-popover-target"
        >
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--withRightIcon Button--variation Button--variation-primary"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
              icon="plus"
            >
              <svg
                data-icon="plus"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  plus
                </desc>
                <path
                  d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="bp3-button-text"
            >
              templatesLibrary.addNewTemplate
            </span>
            <span
              class="bp3-icon bp3-icon-chevron-down StyledProps--main"
              icon="chevron-down"
            >
              <svg
                data-icon="chevron-down"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-down
                </desc>
                <path
                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
      <div
        class="bp3-popover-wrapper DropDown--main"
      >
        <div
          class="bp3-popover-target"
        >
          <div
            class=""
          >
            <div
              class="Layout--horizontal StyledProps--main DropDown--dropdownButton DropDown--withBorder DropDown--minWidth StyledProps--flex"
              data-testid="dropdown-button"
              style="min-width: 130px;"
            >
              <div
                class="Layout--horizontal StyledProps--main DropDown--labelWrapper StyledProps--flex"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main DropDown--label"
                  data-testid="dropdown-value"
                  style="--text-line-clamp: 1;"
                >
                  all
                </p>
              </div>
              <div
                class="Layout--horizontal StyledProps--main DropDown--btnWrapper StyledProps--flex"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                  data-icon="main-chevron-down"
                >
                  <svg
                    height="8"
                    viewBox="0 0 14 8"
                    width="8"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                      fill="#4d5969"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
      style="align-items: center;"
    >
      <div
        class="bp3-input-group ui-search-box ExpandingSearchInput--main expandSearch  ExpandingSearchInput--alwaysExpanded ExpandingSearchInput--light"
        data-name=""
        style="width: 200px; max-width: 200px;"
      >
        <span
          class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
          data-icon="thinner-search"
        >
          <svg
            fill="none"
            height="14"
            viewBox="0 0 16 16"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </span>
        <input
          class="bp3-input  ExpandingSearchInput--filter"
          dir="auto"
          placeholder="search"
          style="padding-right: 38px;"
          type="search"
          value=""
        />
      </div>
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex"
      >
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main GridListToggle--gridButton StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
          data-testid="grid-view"
          data-tooltip-id="grid-view"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-grid-view StyledProps--main"
            icon="grid-view"
          >
            <svg
              data-icon="grid-view"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                grid-view
              </desc>
              <path
                d="M0 1v6h7V0H1C.45 0 0 .45 0 1zm0 14c0 .55.45 1 1 1h6V9H0v6zM15 0H9v7h7V1c0-.55-.45-1-1-1zM9 16h6c.55 0 1-.45 1-1V9H9v7z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main GridListToggle--listUnselected GridListToggle--listButton Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
          data-testid="list-view"
          data-tooltip-id="list-view"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-list StyledProps--main"
            icon="list"
          >
            <svg
              data-icon="list"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                list
              </desc>
              <path
                d="M1 3h14c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm14 10H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main PageBody--pageBody pageBody"
    data-name="page-body"
  >
    <div
      class="Layout--horizontal Layout--layout-spacing-large StyledProps--main StyledProps--margin-bottom-large StyledProps--flex StyledProps--flex-alignItems-center"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
      >
        total
        : 
        1
      </p>
      <div
        class="bp3-popover-wrapper DropDown--main"
      >
        <div
          class="bp3-popover-target"
        >
          <div
            class=""
          >
            <div
              class="Layout--horizontal StyledProps--main DropDown--dropdownButton DropDown--withBorder StyledProps--flex"
              data-testid="dropdown-button"
              style="width: 180px;"
            >
              <div
                class="Layout--horizontal StyledProps--main DropDown--labelWrapper StyledProps--flex"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                  data-icon="main-sort"
                >
                  <svg
                    height="16"
                    viewBox="0 0 18 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M17.125 11.415l-3.713 3.427a.618.618 0 01-.825 0l-3.712-3.427a.51.51 0 010-.761.618.618 0 01.825 0l2.717 2.508V1.538c0-.297.26-.538.583-.538.322 0 .583.241.583.538v11.624l2.717-2.508a.618.618 0 01.825 0 .51.51 0 010 .761zM.875 4.584l3.713-3.426a.618.618 0 01.824 0l3.713 3.426a.51.51 0 010 .762.618.618 0 01-.825 0L5.583 2.838v11.623c0 .298-.26.539-.583.539-.322 0-.583-.241-.583-.539V2.838L1.7 5.346a.618.618 0 01-.825 0 .51.51 0 010-.762z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main DropDown--label"
                  data-testid="dropdown-value"
                  style="--text-line-clamp: 1;"
                >
                  lastUpdatedSort
                </p>
              </div>
              <div
                class="Layout--horizontal StyledProps--main DropDown--btnWrapper StyledProps--flex"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                  data-icon="main-chevron-down"
                >
                  <svg
                    height="8"
                    viewBox="0 0 14 8"
                    width="8"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                      fill="#4d5969"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="templates-view-mock"
    >
      <button>
        Select Template
      </button>
    </div>
  </div>
</div>
`;

exports[`<TemplatesPage /> tests should render error view correctly 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--standard templatesPageHeader StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="PageHeader--breadcrumbsDiv"
      >
        <div
          class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/accountId/cd"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                data-icon="cd-main"
              >
                <svg
                  height="16"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M26.427 7.06A5.073 5.073 0 0129 11.52l-.077 8.934a5.073 5.073 0 01-2.537 4.35l-8.002 4.618a5.073 5.073 0 01-5.035.021l-7.776-4.402A5.073 5.073 0 013 20.583l.077-8.935a5.073 5.073 0 012.537-4.35l8.002-4.619a5.073 5.073 0 015.035-.02l7.776 4.402zm-2.83 6.938c-.42 1.586-2.029 2.538-3.601 2.141l-7.489-2.026a4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.925 4.835 4.835 0 00.479 3.664 4.757 4.757 0 002.905 2.251 4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.924l.26-1.047a.25.25 0 00-.177-.302l-1.258-.34a.25.25 0 00-.307.18l-.256 1.025c-.426 1.602-2.064 2.556-3.651 2.127-1.582-.428-2.523-2.073-2.1-3.67.421-1.586 2.03-2.538 3.602-2.142l7.489 2.027a4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.925 4.835 4.835 0 00-.479-3.664 4.757 4.757 0 00-2.905-2.251 4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.924l-.247.828a.25.25 0 00.174.312l1.259.34a.25.25 0 00.304-.169l.248-.827c.426-1.602 2.064-2.557 3.651-2.127 1.582.428 2.523 2.073 2.1 3.67z"
                    fill="url(#cd-main_svg__a)"
                    fill-rule="evenodd"
                  />
                  <defs>
                    <lineargradient
                      gradientUnits="userSpaceOnUse"
                      id="cd-main_svg__a"
                      x1="6.774"
                      x2="21.5"
                      y1="2"
                      y2="30"
                    >
                      <stop
                        stop-color="#62F91F"
                      />
                      <stop
                        offset="1"
                        stop-color="#45BD35"
                      />
                    </lineargradient>
                  </defs>
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                Yogesh_Test
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="ng-tooltip-native"
      >
        <h2
          data-tooltip-id="templatesPageHeading"
        >
           
          common.templates
        </h2>
      </div>
    </div>
  </div>
  <div
    class="Layout--horizontal StyledProps--main PageSubHeader--container templatesPageSubHeader StyledProps--flex"
  >
    <div
      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
    >
      <span
        class="bp3-popover-wrapper main"
      >
        <span
          class="bp3-popover-target"
        >
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--withRightIcon Button--variation Button--variation-primary"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
              icon="plus"
            >
              <svg
                data-icon="plus"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  plus
                </desc>
                <path
                  d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="bp3-button-text"
            >
              templatesLibrary.addNewTemplate
            </span>
            <span
              class="bp3-icon bp3-icon-chevron-down StyledProps--main"
              icon="chevron-down"
            >
              <svg
                data-icon="chevron-down"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-down
                </desc>
                <path
                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
      <div
        class="bp3-popover-wrapper DropDown--main"
      >
        <div
          class="bp3-popover-target"
        >
          <div
            class=""
          >
            <div
              class="Layout--horizontal StyledProps--main DropDown--dropdownButton DropDown--withBorder DropDown--minWidth StyledProps--flex"
              data-testid="dropdown-button"
              style="min-width: 130px;"
            >
              <div
                class="Layout--horizontal StyledProps--main DropDown--labelWrapper StyledProps--flex"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main DropDown--label"
                  data-testid="dropdown-value"
                  style="--text-line-clamp: 1;"
                >
                  all
                </p>
              </div>
              <div
                class="Layout--horizontal StyledProps--main DropDown--btnWrapper StyledProps--flex"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                  data-icon="main-chevron-down"
                >
                  <svg
                    height="8"
                    viewBox="0 0 14 8"
                    width="8"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                      fill="#4d5969"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
      style="align-items: center;"
    >
      <div
        class="bp3-input-group ui-search-box ExpandingSearchInput--main expandSearch  ExpandingSearchInput--alwaysExpanded ExpandingSearchInput--light"
        data-name=""
        style="width: 200px; max-width: 200px;"
      >
        <span
          class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
          data-icon="thinner-search"
        >
          <svg
            fill="none"
            height="14"
            viewBox="0 0 16 16"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </span>
        <input
          class="bp3-input  ExpandingSearchInput--filter"
          dir="auto"
          placeholder="search"
          style="padding-right: 38px;"
          type="search"
          value=""
        />
      </div>
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex"
      >
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main GridListToggle--gridButton StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
          data-testid="grid-view"
          data-tooltip-id="grid-view"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-grid-view StyledProps--main"
            icon="grid-view"
          >
            <svg
              data-icon="grid-view"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                grid-view
              </desc>
              <path
                d="M0 1v6h7V0H1C.45 0 0 .45 0 1zm0 14c0 .55.45 1 1 1h6V9H0v6zM15 0H9v7h7V1c0-.55-.45-1-1-1zM9 16h6c.55 0 1-.45 1-1V9H9v7z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main GridListToggle--listUnselected GridListToggle--listButton Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
          data-testid="list-view"
          data-tooltip-id="list-view"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-list StyledProps--main"
            icon="list"
          >
            <svg
              data-icon="list"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                list
              </desc>
              <path
                d="M1 3h14c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm14 10H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main PageBody--pageBody pageBody"
    data-name="page-body"
  >
    <div
      class="StyledProps--font StyledProps--main PageError--pageError StyledProps--flex StyledProps--flex-align-center-center"
      style="width: 100%; height: 100%;"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
        style="align-items: center; width: 500px;"
      >
        <span
          class="bp3-icon bp3-icon-error StyledProps--main StyledProps--color StyledProps--color-red500"
          icon="error"
        >
          <svg
            data-icon="error"
            height="32"
            viewBox="0 0 20 20"
            width="32"
          >
            <desc>
              error
            </desc>
            <path
              d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 16H9v-2h2v2zm0-3H9V4h2v9z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-align-center StyledProps--color StyledProps--color-red500"
        >
          someerror
        </p>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Retry
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TemplatesPage /> tests should render loading view correctly 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--standard templatesPageHeader StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="PageHeader--breadcrumbsDiv"
      >
        <div
          class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/accountId/cd"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                data-icon="cd-main"
              >
                <svg
                  height="16"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M26.427 7.06A5.073 5.073 0 0129 11.52l-.077 8.934a5.073 5.073 0 01-2.537 4.35l-8.002 4.618a5.073 5.073 0 01-5.035.021l-7.776-4.402A5.073 5.073 0 013 20.583l.077-8.935a5.073 5.073 0 012.537-4.35l8.002-4.619a5.073 5.073 0 015.035-.02l7.776 4.402zm-2.83 6.938c-.42 1.586-2.029 2.538-3.601 2.141l-7.489-2.026a4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.925 4.835 4.835 0 00.479 3.664 4.757 4.757 0 002.905 2.251 4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.924l.26-1.047a.25.25 0 00-.177-.302l-1.258-.34a.25.25 0 00-.307.18l-.256 1.025c-.426 1.602-2.064 2.556-3.651 2.127-1.582-.428-2.523-2.073-2.1-3.67.421-1.586 2.03-2.538 3.602-2.142l7.489 2.027a4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.925 4.835 4.835 0 00-.479-3.664 4.757 4.757 0 00-2.905-2.251 4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.924l-.247.828a.25.25 0 00.174.312l1.259.34a.25.25 0 00.304-.169l.248-.827c.426-1.602 2.064-2.557 3.651-2.127 1.582.428 2.523 2.073 2.1 3.67z"
                    fill="url(#cd-main_svg__a)"
                    fill-rule="evenodd"
                  />
                  <defs>
                    <lineargradient
                      gradientUnits="userSpaceOnUse"
                      id="cd-main_svg__a"
                      x1="6.774"
                      x2="21.5"
                      y1="2"
                      y2="30"
                    >
                      <stop
                        stop-color="#62F91F"
                      />
                      <stop
                        offset="1"
                        stop-color="#45BD35"
                      />
                    </lineargradient>
                  </defs>
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                Yogesh_Test
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="ng-tooltip-native"
      >
        <h2
          data-tooltip-id="templatesPageHeading"
        >
           
          common.templates
        </h2>
      </div>
    </div>
  </div>
  <div
    class="Layout--horizontal StyledProps--main PageSubHeader--container templatesPageSubHeader StyledProps--flex"
  >
    <div
      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
    >
      <span
        class="bp3-popover-wrapper main"
      >
        <span
          class="bp3-popover-target"
        >
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--withRightIcon Button--variation Button--variation-primary"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
              icon="plus"
            >
              <svg
                data-icon="plus"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  plus
                </desc>
                <path
                  d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="bp3-button-text"
            >
              templatesLibrary.addNewTemplate
            </span>
            <span
              class="bp3-icon bp3-icon-chevron-down StyledProps--main"
              icon="chevron-down"
            >
              <svg
                data-icon="chevron-down"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-down
                </desc>
                <path
                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
      <div
        class="bp3-popover-wrapper DropDown--main"
      >
        <div
          class="bp3-popover-target"
        >
          <div
            class=""
          >
            <div
              class="Layout--horizontal StyledProps--main DropDown--dropdownButton DropDown--withBorder DropDown--minWidth StyledProps--flex"
              data-testid="dropdown-button"
              style="min-width: 130px;"
            >
              <div
                class="Layout--horizontal StyledProps--main DropDown--labelWrapper StyledProps--flex"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main DropDown--label"
                  data-testid="dropdown-value"
                  style="--text-line-clamp: 1;"
                >
                  all
                </p>
              </div>
              <div
                class="Layout--horizontal StyledProps--main DropDown--btnWrapper StyledProps--flex"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                  data-icon="main-chevron-down"
                >
                  <svg
                    height="8"
                    viewBox="0 0 14 8"
                    width="8"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                      fill="#4d5969"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
      style="align-items: center;"
    >
      <div
        class="bp3-input-group ui-search-box ExpandingSearchInput--main expandSearch  ExpandingSearchInput--alwaysExpanded ExpandingSearchInput--light"
        data-name=""
        style="width: 200px; max-width: 200px;"
      >
        <span
          class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
          data-icon="thinner-search"
        >
          <svg
            fill="none"
            height="14"
            viewBox="0 0 16 16"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </span>
        <input
          class="bp3-input  ExpandingSearchInput--filter"
          dir="auto"
          placeholder="search"
          style="padding-right: 38px;"
          type="search"
          value=""
        />
      </div>
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex"
      >
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main GridListToggle--gridButton StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
          data-testid="grid-view"
          data-tooltip-id="grid-view"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-grid-view StyledProps--main"
            icon="grid-view"
          >
            <svg
              data-icon="grid-view"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                grid-view
              </desc>
              <path
                d="M0 1v6h7V0H1C.45 0 0 .45 0 1zm0 14c0 .55.45 1 1 1h6V9H0v6zM15 0H9v7h7V1c0-.55-.45-1-1-1zM9 16h6c.55 0 1-.45 1-1V9H9v7z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main GridListToggle--listUnselected GridListToggle--listButton Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
          data-testid="list-view"
          data-tooltip-id="list-view"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-list StyledProps--main"
            icon="list"
          >
            <svg
              data-icon="list"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                list
              </desc>
              <path
                d="M1 3h14c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm14 10H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main PageBody--pageBody pageBody"
    data-name="page-body"
  >
    <div
      class="StyledProps--font StyledProps--main PageSpinner--spinner StyledProps--flex StyledProps--flex-align-center-center"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main PageSpinner--content"
        style="align-items: center; width: 500px;"
      >
        <span
          class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey600"
          data-icon="steps-spinner"
        >
          <svg
            height="32"
            viewBox="0 0 128 128"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M122.5 69.25H96.47a33.1 33.1 0 000-10.5h26.05a5.25 5.25 0 010 10.5z"
                fill="#ff8e02"
              />
              <path
                d="M112.04 97.83L89.47 84.8a33.1 33.1 0 005.25-9.1l22.57 13.03a5.25 5.25 0 01-5.28 9.1zM88.68 117.35L75.65 94.78a33.1 33.1 0 009.1-5.25l13.02 22.57a5.25 5.25 0 11-9.1 5.25zM58.7 122.57V96.5a33.1 33.1 0 0010.5 0v26.07a5.25 5.25 0 01-10.5 0zM30.1 112.1l13.04-22.57a33.1 33.1 0 009.1 5.25L39.2 117.35a5.25 5.25 0 11-9.1-5.25zM10.6 88.74L33.16 75.7a33.1 33.1 0 005.25 9.1L15.88 97.83a5.25 5.25 0 11-5.25-9.1z"
                fill="#ffddb3"
                fill-opacity="0.3"
              />
              <path
                d="M5.37 58.75h26.06a33.1 33.1 0 000 10.5H5.37a5.25 5.25 0 010-10.5z"
                fill="#ffd29a"
                fill-opacity="0.4"
              />
              <path
                d="M15.85 30.17L38.4 43.2a33.1 33.1 0 00-5.24 9.1L10.6 39.25a5.25 5.25 0 115.25-9.1z"
                fill="#ffc680"
                fill-opacity="0.5"
              />
              <path
                d="M39.2 10.65l13.03 22.57a33.1 33.1 0 00-9.1 5.25l-13-22.57a5.25 5.25 0 119.1-5.25z"
                fill="#ffbb67"
                fill-opacity="0.6"
              />
              <path
                d="M69.2 5.43V31.5a33.1 33.1 0 00-10.5 0V5.42a5.25 5.25 0 1110.5 0z"
                fill="#ffb04d"
                fill-opacity="0.7"
              />
              <path
                d="M97.77 15.9L84.75 38.47a33.1 33.1 0 00-9.1-5.25l13.03-22.57a5.25 5.25 0 119.1 5.25z"
                fill="#ffa535"
                fill-opacity="0.8"
              />
              <path
                d="M117.3 39.26L94.7 52.3a33.1 33.1 0 00-5.25-9.1l22.57-13.03a5.25 5.25 0 015.25 9.1z"
                fill="#ff991b"
                fill-opacity="0.9"
              />
              <animatetransform
                attributeName="transform"
                calcMode="discrete"
                dur="1200ms"
                repeatCount="indefinite"
                type="rotate"
                values="0 64 64;30 64 64;60 64 64;90 64 64;120 64 64;150 64 64;180 64 64;210 64 64;240 64 64;270 64 64;300 64 64;330 64 64"
              />
            </g>
          </svg>
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
        >
          Loading, please wait...
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TemplatesPage /> tests should render no results view correctly 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--standard templatesPageHeader StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="PageHeader--breadcrumbsDiv"
      >
        <div
          class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/accountId/cd"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                data-icon="cd-main"
              >
                <svg
                  height="16"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M26.427 7.06A5.073 5.073 0 0129 11.52l-.077 8.934a5.073 5.073 0 01-2.537 4.35l-8.002 4.618a5.073 5.073 0 01-5.035.021l-7.776-4.402A5.073 5.073 0 013 20.583l.077-8.935a5.073 5.073 0 012.537-4.35l8.002-4.619a5.073 5.073 0 015.035-.02l7.776 4.402zm-2.83 6.938c-.42 1.586-2.029 2.538-3.601 2.141l-7.489-2.026a4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.925 4.835 4.835 0 00.479 3.664 4.757 4.757 0 002.905 2.251 4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.924l.26-1.047a.25.25 0 00-.177-.302l-1.258-.34a.25.25 0 00-.307.18l-.256 1.025c-.426 1.602-2.064 2.556-3.651 2.127-1.582-.428-2.523-2.073-2.1-3.67.421-1.586 2.03-2.538 3.602-2.142l7.489 2.027a4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.925 4.835 4.835 0 00-.479-3.664 4.757 4.757 0 00-2.905-2.251 4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.924l-.247.828a.25.25 0 00.174.312l1.259.34a.25.25 0 00.304-.169l.248-.827c.426-1.602 2.064-2.557 3.651-2.127 1.582.428 2.523 2.073 2.1 3.67z"
                    fill="url(#cd-main_svg__a)"
                    fill-rule="evenodd"
                  />
                  <defs>
                    <lineargradient
                      gradientUnits="userSpaceOnUse"
                      id="cd-main_svg__a"
                      x1="6.774"
                      x2="21.5"
                      y1="2"
                      y2="30"
                    >
                      <stop
                        stop-color="#62F91F"
                      />
                      <stop
                        offset="1"
                        stop-color="#45BD35"
                      />
                    </lineargradient>
                  </defs>
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                Yogesh_Test
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="ng-tooltip-native"
      >
        <h2
          data-tooltip-id="templatesPageHeading"
        >
           
          common.templates
        </h2>
      </div>
    </div>
  </div>
  <div
    class="Layout--horizontal StyledProps--main PageSubHeader--container templatesPageSubHeader StyledProps--flex"
  >
    <div
      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
    >
      <span
        class="bp3-popover-wrapper main"
      >
        <span
          class="bp3-popover-target"
        >
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--withRightIcon Button--variation Button--variation-primary"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
              icon="plus"
            >
              <svg
                data-icon="plus"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  plus
                </desc>
                <path
                  d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="bp3-button-text"
            >
              templatesLibrary.addNewTemplate
            </span>
            <span
              class="bp3-icon bp3-icon-chevron-down StyledProps--main"
              icon="chevron-down"
            >
              <svg
                data-icon="chevron-down"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-down
                </desc>
                <path
                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
      <div
        class="bp3-popover-wrapper DropDown--main"
      >
        <div
          class="bp3-popover-target"
        >
          <div
            class=""
          >
            <div
              class="Layout--horizontal StyledProps--main DropDown--dropdownButton DropDown--withBorder DropDown--minWidth StyledProps--flex"
              data-testid="dropdown-button"
              style="min-width: 130px;"
            >
              <div
                class="Layout--horizontal StyledProps--main DropDown--labelWrapper StyledProps--flex"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main DropDown--label"
                  data-testid="dropdown-value"
                  style="--text-line-clamp: 1;"
                >
                  all
                </p>
              </div>
              <div
                class="Layout--horizontal StyledProps--main DropDown--btnWrapper StyledProps--flex"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                  data-icon="main-chevron-down"
                >
                  <svg
                    height="8"
                    viewBox="0 0 14 8"
                    width="8"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                      fill="#4d5969"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
      style="align-items: center;"
    >
      <div
        class="bp3-input-group ui-search-box ExpandingSearchInput--main expandSearch  ExpandingSearchInput--alwaysExpanded ExpandingSearchInput--light"
        data-name=""
        style="width: 200px; max-width: 200px;"
      >
        <span
          class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
          data-icon="thinner-search"
        >
          <svg
            fill="none"
            height="14"
            viewBox="0 0 16 16"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </span>
        <input
          class="bp3-input  ExpandingSearchInput--filter"
          dir="auto"
          placeholder="search"
          style="padding-right: 38px;"
          type="search"
          value=""
        />
      </div>
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex"
      >
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main GridListToggle--gridButton StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
          data-testid="grid-view"
          data-tooltip-id="grid-view"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-grid-view StyledProps--main"
            icon="grid-view"
          >
            <svg
              data-icon="grid-view"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                grid-view
              </desc>
              <path
                d="M0 1v6h7V0H1C.45 0 0 .45 0 1zm0 14c0 .55.45 1 1 1h6V9H0v6zM15 0H9v7h7V1c0-.55-.45-1-1-1zM9 16h6c.55 0 1-.45 1-1V9H9v7z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main GridListToggle--listUnselected GridListToggle--listButton Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
          data-testid="list-view"
          data-tooltip-id="list-view"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-list StyledProps--main"
            icon="list"
          >
            <svg
              data-icon="list"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                list
              </desc>
              <path
                d="M1 3h14c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm14 10H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main PageBody--pageBody pageBody"
    data-name="page-body"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-xxxlarge StyledProps--main mainContainer StyledProps--flex StyledProps--flex-align-center-center"
    >
      <img
        src="test-file-stub"
        width="220px"
      />
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-size-normal StyledProps--color StyledProps--color-grey700"
      >
        templatesLibrary.templatesPage.noTemplates
      </p>
      <span
        class="bp3-popover-wrapper main"
      >
        <span
          class="bp3-popover-target"
        >
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--withRightIcon Button--variation Button--variation-primary"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
              icon="plus"
            >
              <svg
                data-icon="plus"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  plus
                </desc>
                <path
                  d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="bp3-button-text"
            >
              templatesLibrary.addNewTemplate
            </span>
            <span
              class="bp3-icon bp3-icon-chevron-down StyledProps--main"
              icon="chevron-down"
            >
              <svg
                data-icon="chevron-down"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-down
                </desc>
                <path
                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </div>
  </div>
</div>
`;
